# license-plate-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
data/: data.yaml
scripts/: split_dataset.py
src/: __init__.py  evaluate.py  logger.py  model_impl.py  track_smoothing.py  train.py  video_mode.py  visualization.py
