[tool.poetry]
name = "license-plate-detection"
version = "0.1.0"
description = "License plate detection system using YOLO"
authors = ["uaneere <rus.agafonov29@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
ultralytics = "^8.0.0"
wandb = "^0.15.0"
pytest = "^7.4.0"
loguru = "^0.7.0"
click = "^8.1.0"
pillow = "^10.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
notebook = "^7.5.5"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88