[tool.poetry]
name = "license-plate-detection"
version = "0.1.0"
description = "License plate detection system using YOLO"
authors = ["uaneere <rus.agafonov29@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "main.py" },
]

[tool.poetry.scripts]
lpr-detect = "main:cli"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
loguru = "^0.7.0"
click = "^8.1.0"
pillow = "^10.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"